everything working great, but small bug when you click on a nav link. the bar seems to jump around a lot. need to disable the observer during scroll animation.

--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -1,3 +1,4 @@
 .active-nav-link {
   opacity: 1;
+  border-left: solid 1px;
 }
